Put changes under the appropriate header. Headers can include API CHANGES,
DIFFERENT BEHAVIOR, BUG FIXES, DEPENDENCIES, ENHANCEMENTS, NEW FEATURES, and
OTHER. Entries should be in chronological order, i.e. oldest at the top

0.11  Ddd, Mth #, 201#

  [BUG FIXES]
  
  * BSDs were switched to use cc, but that is clang (at least on some
    BSDs) so we need to add the heinous-gnu-extensions flag.
  
  * Add patch for Mac OSX to #define _VA_LIST_T. Macs were hitting trouble
    with incompatible preprocessor definitions. If the macros and internal
    definitions had all been expanded, the definitions for variadic function
    lists would have been the same, but tcc doesn't know that.
  
  [OTHER]
  
  * The test suite has been made robust against compiler warnings. It now
    searches for expected printouts as substrings of the obtained printouts.

0.10  Thu, June 2, 2016

  [BUG FIXES]
  
  * Fix 64-bit cpu specification for call to configure on Macs.

0.09  Mon, May 30, 2016

  [DEPENDENCIES]
  
  * Recently, extended symbol table work was brought back up-to-date with
    the latest mob branch of tcc. The github branch with this work is
    called 'mobx'. This Alien package now uses mobx as its subrepo.

0.08  Sun, Apr 24, 2016

  [ENHANCEMENTS]
  
  * Include new exsymtab inline test files.
  
  [BUG FIXES]
  
  * Use "cc" instead of "gcc" on BSDs
  
  * MANIFEST now includes all necessary mingw header files in the git
    repo. Somehow I forgot to include these after I figured out which
    ones needed to be added.

0.07  Wed, Dec 2, 2015

  * Updated to latest work including inline support for inline functions.
  
  [ENHANCEMENTS]
  
  * New and improved patching for Mac and NetBSD
  
  * Added tentative support for Solaris
  
  * Remove stack protection on Linuxes; this was causing trouble on
    recent vintages of Ubuntu.

0.06  Sat, Aug 1, 2015

  * Forked from v0.05 of Alien::TinyCC; the source repository is now my local